<resources>
    <string name="app_name">ITunes</string>

    <string name="all">All</string>

    <string name="movies">Movies</string>

    <string name="music">Music</string>

    <string name="ebook">Ebook</string>

    <string name="podcast">Podcast</string>

    <string name="price_unit">$</string>

    <string name="release">Relase Date : </string>

    <string name="search">Search</string>
</resources>